--- a/1ste-site.html
+++ b/1ste-site.html
@@ -37,7 +37,7 @@ tr:nth-child(even) {
   </tr>
 
 </table>
-<table>
+<table style="color: aliceblue;">
 <img src="https://i.imgur.com/CT4ZwfW.png" alt="logo" width="40" height="39">
 </table>
 <h3> Making the healthcare experience more human</h3>
@@ -48,27 +48,48 @@ tr:nth-child(even) {
 </table>
 <br></br>
 <table>
-  <th style="background-color:#00b39b ;"> 
+  <th style="background-color:#00b39b ;border-radius: 3pc; margin-left: 15px;text-align: center; color: azure;">
+    <br></br>
     <img src="https://i.imgur.com/y9Sjvya.png" alt="patient">
+    <br></br>
     <p>For patients</p>
     <p>Find a doctor, book a visit and solve any health-related doubt</p>
     <br></br>
+    <br></br>
     <p>Choose country</p>
+    <br></br>
   </th>
-  <th style="background-color:#508fe2 ;"><img src="https://i.imgur.com/yD8RzMN.png" alt="dokter">
+  <th></th>
+  <th style="background-color:#508fe2 ;border-radius: 3pc; margin-left: 20px;text-align: center;color: azure;">
+    <br></br>
+    <img src="https://i.imgur.com/yD8RzMN.png" alt="dokter">
+    <br></br>
     <p>For doctors</p>
     <p>Save time managing visits and cut no-shows by half</p>
     <br></br>
+    <br></br>
     <p>Choose country</p>
+    <br></br>
 </th>
-  <th style="background-color:rgb(50, 60, 72) ;"><img src="https://i.imgur.com/NZuemwM.png" alt="kliniek">
+<th></th>
+  <th style="background-color:rgb(50, 60, 72) ;border-radius: 5pc ;margin-left: 20px;text-align: center;color: azure;">
+    <br></br>
+    <img src="https://i.imgur.com/NZuemwM.png" alt="kliniek">
+    <br></br>
     <p>For clinics</p>
     <p>Deliver an exceptional patient experience in your clinic</p>
     <br></br>
     <p>2 to 20 specialists</p>
     <p>More than 20 specialists</p>
+    <br></br>
   </th>
+</table>
+<br></br>
+<table>
+  <th>We are a global
+    <br> company<br>
+    with local culture</th>
+  <th><img src="https://i.imgur.com/iZdTSOQ.png" alt="logos"></th>
 </table>
 </body>
 </html>
-
