--- a/1ste-site.html
+++ b/1ste-site.html
@@ -31,9 +31,9 @@ tr:nth-child(even) {
 <table style="100%">
   <tr>
     <th style="70%">Docplanner Group</th>
-    <th style="10%">About us</th>
-    <th style="10%">Career</th>
-    <th style="10%"> departments</th>
+    <th style="10%; text-align: right;">About us</th>
+    <th style="10% ; text-align: right;">Career</th>
+    <th style="10% ; text-align: right;"> departments</th>
   </tr>
 
 </table>
@@ -93,3 +93,4 @@ tr:nth-child(even) {
 </table>
 </body>
 </html>
+
